--- a/unsplash-client/src/App.css
+++ b/unsplash-client/src/App.css
@@ -1,14 +1,32 @@
-/* /* .App {
-  text-align: center;
+* {
+  box-sizing: border-box;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  max-width: 75vw;
+  margin: auto;
+}
+
+.header {
+  padding: 30px;
+}
+
+.row {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-} */
+  flex-wrap: wrap;
+  /* padding: 0 4px; */
+}
+
+/* Create four equal columns that sits next to each other */
+.column {
+  flex: 25%;
+  height: 25vh;
+  max-width: 25%;
+  /* padding: 0 4px; */
+}
+
+.column img {
+  /* margin-top: 8px; */
+  vertical-align: middle;
+  width: 100%;
+}
