--- a/unsplash-client/src/components/Cards/Card.css
+++ b/unsplash-client/src/components/Cards/Card.css
@@ -4,10 +4,10 @@
  hover (remove perspective if you don't want the 3D effect */
  .flip-card {
     background-color: transparent;
-    width: 300px;
-    height: 200px;
-    border: 1px solid #f1f1f1;
-    perspective: 1000px; /* Remove this if you don't want the 3D effect */
+    width: 100%;
+    height: 100%;
+    /* border: 1px solid #f1f1f1; */
+    /* perspective: 1000px; Remove this if you don't want the 3D effect */
   }
   
   /* This container is needed to position the front and back side */
@@ -47,7 +47,18 @@
   
   /* Style the back side */
   .flip-card-back {
+    padding: 30px 0 0 5px;
+    margin: 0%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
     background-color: dodgerblue;
     color: white;
     transform: rotateY(180deg);
   } 
+
+  .flip-card-back h4, .flip-card-back p {
+    text-align: left;
+    margin-bottom: 1.5px;
+  }
