--- a/unsplash-client/src/components/SearchForm/SearchForm.css
+++ b/unsplash-client/src/components/SearchForm/SearchForm.css
@@ -1,19 +1,30 @@
-form {
-    width: auto;
-}
-
-input[type=text] {
-    width: 100%;
-    padding: 10px 20px;
-
-}
-
-button {
-    background-color: #4CAF50;
-    border: none;
+form.example input[type=text] {
+    padding: 10px;
+    font-size: 17px;
+    border: 1px solid grey;
+    float: left;
+    width: 80%;
+    background: #f1f1f1;
+  }
+  
+  form.example button {
+    float: left;
+    width: 20%;
+    padding: 10px;
+    background: #2196F3;
     color: white;
-    padding: 16px 32px;
-    text-decoration: none;
-    margin: 4px 2px;
+    font-size: 17px;
+    border: 1px solid grey;
+    border-left: none;
     cursor: pointer;
-}
+  }
+  
+  form.example button:hover {
+    background: #0b7dda;
+  }
+  
+  form.example::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
