--- a/elle/scss/style.scss
+++ b/elle/scss/style.scss
@@ -1,12 +1,12 @@
-@use 'brand-variables';
+@import 'brand-variables';
 
-$default-border-color: #3A3E4F;
-$footer-bg-color: #3A3E4F;
-$footer-font-color:  #E5E5E5;
+// $default-border-color: #3A3E4F;
+// $footer-bg-color: #3A3E4F;
+// $footer-font-color:  #E5E5E5;
 
-$main-header-font: 'Niconne', cursive;
-$default-font: 'Raleway', sans-serif;
-$default-font-color: #3A3E4F;
+// $main-header-font: 'Niconne', cursive;
+// $default-font: 'Raleway', sans-serif;
+// $default-font-color: #3A3E4F;
 
 * { box-sizing: border-box; margin: 0%; padding: 0%; }
 
