--- a/elle/scss/_brand-variables.scss
+++ b/elle/scss/_brand-variables.scss
@@ -1,1 +1,9 @@
 // $border-color: #9E9E9E
+
+$default-border-color: #3A3E4F;
+$footer-bg-color: #3A3E4F;
+$footer-font-color:  #E5E5E5;
+
+$main-header-font: 'Niconne', cursive;
+$default-font: 'Raleway', sans-serif;
+$default-font-color: #3A3E4F;
