--- a/angular-projects/template-driven-form/src/styles.css
+++ b/angular-projects/template-driven-form/src/styles.css
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+/* Let's use Bootstrap 3.3.7 to make our design life easier. */
+@import url('https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css');
+
+body {
+  width: 80%;
+  margin: 0 auto;
+}
+
+/* let's have this global to the app for now */
+.ng-valid[required], .ng-valid.required  {
+  border-left: 5px solid #42A948; /* green */
+}
+
+.ng-invalid:not(form)  {
+  border-left: 5px solid #a94442; /* red */
+}
