--- a/angular-projects/template-driven-form/src/app/components/hero-form/hero-form.component.html
+++ b/angular-projects/template-driven-form/src/app/components/hero-form/hero-form.component.html
@@ -8,7 +8,7 @@
     #heroForm is an example of template reference variable.
     TODO: What is template reference variable?
    -->
-  <form (ngSubmit)="onSubmit" #heroForm="ngForm">
+  <form (ngSubmit)="onSubmit()" #heroForm="ngForm">
     <div class="form-group">
       <label for="name">Hero Name</label>
       <!--
@@ -38,7 +38,7 @@
 
     <div class="form-group">
       <label for="power">Hero Powers</label>
-      <select id="power" class="form-control">
+      <select id="power" class="form-control" [(ngModel)]="model.power" name="power">
         <!--
           *ngFor is an Angular directive which allows you
           to loop through an array (or collection)
@@ -65,6 +65,7 @@
   </form>
 </div>
 
+<!--
 <div [hidden]="!submitted">
   <h2>You submitted the following:</h2>
   <div class="row">
@@ -81,4 +82,4 @@
   </div>
   <br>
   <button type="button" class="btn btn-primary" (click)="submitted=false">Edit</button>
-</div>
+</div> -->
