--- a/angular-projects/template-driven-form/src/app/components/hero-form/hero-form.component.html
+++ b/angular-projects/template-driven-form/src/app/components/hero-form/hero-form.component.html
@@ -55,11 +55,23 @@
       after the newHero() is called, the reset() gets executed.
       this is to maintain the pristine condition of the form.
      -->
-    <button type="button" class="btn btn-default" (click)="newHero(); heroForm.reset()">
+    <button type="button" class="btn btn-outline-secondary " (click)="newHero(); heroForm.reset()">
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-plus"
+        viewBox="0 0 16 16">
+        <path
+          d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H1s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C9.516 10.68 8.289 10 6 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z" />
+        <path fill-rule="evenodd"
+          d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z" />
+      </svg>
       New Hero
     </button>
     <!-- this submit button is disabled if the heroForm is invalid -->
-    <button type="submit" class="btn btn-success" [disabled]="!heroForm.form.valid">
+    <button type="submit" class="btn btn-outline-success" [disabled]="!heroForm.form.valid">
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-save"
+        viewBox="0 0 16 16">
+        <path
+          d="M2 1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H9.5a1 1 0 0 0-1 1v7.293l2.646-2.647a.5.5 0 0 1 .708.708l-3.5 3.5a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L7.5 9.293V2a2 2 0 0 1 2-2H14a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h2.5a.5.5 0 0 1 0 1H2z" />
+      </svg>
       Submit
     </button>
   </form>
