--- a/angular-projects/template-driven-form/src/app/components/hero-table/hero-table.component.html
+++ b/angular-projects/template-driven-form/src/app/components/hero-table/hero-table.component.html
@@ -8,6 +8,7 @@
       <th scope="col">Name</th>
       <th scope="col">Power</th>
       <th scope="col">Alter Ego</th>
+      <th scope="col">Delete</th>
     </tr>
   </thead>
   <tbody>
@@ -16,11 +17,22 @@
       (click)="onSelect(hero)" defines the click event handler
         and the hero object to be passed.
      -->
-    <tr *ngFor="let hero of heroes" (click)="onClick(hero)">
+    <tr *ngFor="let hero of heroes" (click)="onClick(hero)" [ngClass]="{'table-success': hero.id === newHero?.id}">
       <td>{{hero.id}}</td>
       <td>{{hero.name}}</td>
       <td>{{hero.power}}</td>
       <td>{{hero.alterEgo}}</td>
+      <td>
+        <button class="btn btn-outline-danger">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash"
+            viewBox="0 0 16 16">
+            <path
+              d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" />
+            <path fill-rule="evenodd"
+              d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
+          </svg>
+        </button>
+      </td>
     </tr>
   </tbody>
 </table>
