--- a/angular-projects/template-driven-form/src/styles.css
+++ b/angular-projects/template-driven-form/src/styles.css
@@ -4,9 +4,8 @@
 
 body {
   width: 80%;
-  height: 100vh;
+  /* height: 100vh; */
   margin: 0 auto;
-  border: 1px solid black;
 }
 
 /* let's have this global to the app for now */
