completed myBlog with Scully

--- a/angular-projects/myblog/src/app/core/header/header.component.html
+++ b/angular-projects/myblog/src/app/core/header/header.component.html
@@ -3,7 +3,7 @@
     <a href="" class="navbar-brand">Angular Projects</a>
     <ul class="navbar me-auto">
       <li class="nav-item">
-        <a href="" class="nav-link">Articls</a>
+        <a routerLink="/articles" routerLinkActive="active" class="nav-link">Articls</a>
       </li>
       <li class="nav-item">
         <a routerLink="/contact" routerLinkActive="active" routerLinkActive="router-link-active"
