--- a/angular-projects/issue-tracker/src/app/components/issue-list/issue-list.component.html
+++ b/angular-projects/issue-tracker/src/app/components/issue-list/issue-list.component.html
@@ -1,17 +1,21 @@
-<clr-datagrid>
-  <clr-dg-column [clrDgField]="'issueNo'" [clrDgColType]="'number'">Issue Number</clr-dg-column>
-  <clr-dg-column [clrDgField]="'title'">Title</clr-dg-column>
-  <clr-dg-column [clrDgField]="'description'">Description</clr-dg-column>
-  <clr-dg-column [clrDgField]="'priority'">Priority</clr-dg-column>
+<ng-container *ngIf="showReportIssue===false">
+  <button class="btn btn-primary" (click)="showReportIssue=true">Add new issue</button>
+  <clr-datagrid>
+    <clr-dg-column [clrDgField]="'issueNo'" [clrDgColType]="'number'">Issue Number</clr-dg-column>
+    <clr-dg-column [clrDgField]="'title'">Title</clr-dg-column>
+    <clr-dg-column [clrDgField]="'description'">Description</clr-dg-column>
+    <clr-dg-column [clrDgField]="'priority'">Priority</clr-dg-column>
 
-  <clr-dg-row *clrDgItems="let issue of issues">
-    <clr-dg-cell>{{issue.issueNo}}</clr-dg-cell>
-    <clr-dg-cell>{{issue.title}}</clr-dg-cell>
-    <clr-dg-cell>{{issue.description}}</clr-dg-cell>
-    <clr-dg-cell>
-      <span class="label" [class.label-danger]="issue.priority === 'high'">
-        {{issue.priority}}
-      </span>
-    </clr-dg-cell>
-  </clr-dg-row>
-</clr-datagrid>
+    <clr-dg-row *clrDgItems="let issue of issues">
+      <clr-dg-cell>{{issue.issueNo}}</clr-dg-cell>
+      <clr-dg-cell>{{issue.title}}</clr-dg-cell>
+      <clr-dg-cell>{{issue.description}}</clr-dg-cell>
+      <clr-dg-cell>
+        <span class="label" [class.label-danger]="issue.priority === 'high'">
+          {{issue.priority}}
+        </span>
+      </clr-dg-cell>
+    </clr-dg-row>
+    </clr-datagrid>
+    <app-issue-report *ngIf="showReportIssue" (formClose)="onCloseReport()"></app-issue-report>
+    </ng-container>
