--- a/angular-projects/issue-tracker/src/app/components/issue-report/issue-report.component.html
+++ b/angular-projects/issue-tracker/src/app/components/issue-report/issue-report.component.html
@@ -4,10 +4,25 @@
   <clr-input-container>
     <label for="">Title</label>
     <input clrInput formControlName="title" />
+    <clr-control-error>Title is required.</clr-control-error>
   </clr-input-container>
+<div class="clr-row" *ngIf="suggestions.length">
+  <div class="clr-col-lg-2"></div>
+  <div class="clr-col-lg-6">
+    <clr-stack-view>
+      <clr-stack-header>Similar Issues</clr-stack-header>
+      <clr-stack-block *ngFor="let issue of suggestions">
+        <clr-stack-label># {{issue.issueNo}}: {{issue.title}}</clr-stack-label>
+        <clr-stack-content>{{issue.description}}</clr-stack-content>
+      </clr-stack-block>
+    </clr-stack-view>
+  </div>
+</div>
+
   <clr-textarea-container>
     <label for="">Description</label>
     <textarea clrTextarea formControlName="description"></textarea>
+    <clr-control-error>Description is required.</clr-control-error>
   </clr-textarea-container>
   <clr-radio-container clrInline>
     <label for="">Priority</label>
@@ -19,6 +34,7 @@
       <input type="radio" value="high" clrRadio formControlName="priority" />
       <label>high</label>
     </clr-radio-wrapper>
+    <clr-control-error>Please define a priority.</clr-control-error>
   </clr-radio-container>
   <clr-select-container>
     <label>Type</label>
@@ -27,8 +43,8 @@
       <option value="Bug">Bug</option>
       <option value="Description">Description</option>
     </select>
+    <clr-control-error>Please select the type.</clr-control-error>
   </clr-select-container>
+  <button class="btn btn-primary" type="submit">Create</button>
+  <button class="btn" type="button" (click)="formClose.emit()">Cancel</button>
 </form>
-
-<button class="btn btn-primary" type="submit">Create</button>
-<button class="btn" type="button" (click)="formClose.emit()">Cancel</button>
