--- a/angular-projects/template-driven-form/src/app/app.component.html
+++ b/angular-projects/template-driven-form/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div class="row">
   <div class="col">
     <app-hero-form (redirect)="updateHeroTable($event)"></app-hero-form>
-    <app-hero-table [newHero]="newHero" [heroes]="heroes" (selectedHero)="selectedHero($event)"></app-hero-table>
+    <app-hero-table [newHero]="newHero" [heroes]="heroes" (selectedHero)="selectedHero($event)"
+      (deletedHero)="deletedHero($event)"></app-hero-table>
   </div>
 </div>
 <!-- <div class="col">
