--- a/angular-projects/template-driven-form/src/app/components/hero-form/hero-form.component.html
+++ b/angular-projects/template-driven-form/src/app/components/hero-form/hero-form.component.html
@@ -38,18 +38,26 @@
 
     <div class="form-group">
       <label for="power">Hero Powers</label>
-      <select id="power" class="form-control" [(ngModel)]="model.power" name="power">
+      <select class="form-control" [(ngModel)]="model.power" required id="power" name="power" #power="ngModel">
         <!--
           *ngFor is an Angular directive which allows you
           to loop through an array (or collection)
          -->
         <option *ngFor="let pow of powers" [value]="">{{pow}}</option>
       </select>
+      <div [hidden]="power.valid || power.pristine" class="alert alert-danger">
+        Power is required
+      </div>
     </div>
 
     <div class="form-group">
       <label for="alterEgo">Alter Ego</label>
-      <input type="text" class="form-control" id="alterEgo" [(ngModel)]="model.alterEgo" name="alterEgo">
+      <input type="text" class="form-control" [(ngModel)]="model.alterEgo" required id="alterEgo" name="alterEgo"
+        #alterEgo="ngModel">
+      <div [hidden]="alterEgo.valid || alterEgo.pristine" class="alert alert-danger">
+        AlterEgo is required
+      </div>
+
     </div>
     <!--
       after the newHero() is called, the reset() gets executed.
@@ -65,6 +73,7 @@
       </svg>
       New Hero
     </button>
+
     <!-- this submit button is disabled if the heroForm is invalid -->
     <button type="submit" class="btn btn-outline-success" [disabled]="!heroForm.form.valid">
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-save"
