--- a/angular-projects/angular-router-sample/src/app/app.component.html
+++ b/angular-projects/angular-router-sample/src/app/app.component.html
@@ -13,8 +13,8 @@
 </nav>
 
 <!-- these are the components we created -->
-<app-crisis-list></app-crisis-list>
-<app-heroes-list></app-heroes-list>
+<!-- <app-crisis-list></app-crisis-list>
+<app-heroes-list></app-heroes-list> -->
 
 <!--
   <router-outlet> acts as a placeholder that Angular
