--- a/angular-projects/template-driven-form/src/app/app.component.html
+++ b/angular-projects/template-driven-form/src/app/app.component.html
@@ -1,12 +1,9 @@
-<div class="row">
-  <div class="col">
-    <app-hero-form (redirect)="updateHeroTable($event)"></app-hero-form>
-    <app-hero-table [newHero]="newHero" [heroes]="heroes" (selectedHero)="selectedHero($event)"
-      (deletedHero)="deletedHero($event)"></app-hero-table>
-  </div>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <router-outlet>
+
+      </router-outlet>
+      </div>
+      </div>
 </div>
-<!-- <div class="col">
-    <h2>Hero Profile Here</h2>
-    <app-hero-profile [heroProfile]="selectedHeroFile"></app-hero-profile>
-  </div>
-</div> -->
