--- a/angular-projects/template-driven-form/src/app/components/hero-form/hero-form.component.html
+++ b/angular-projects/template-driven-form/src/app/components/hero-form/hero-form.component.html
@@ -1,4 +1,12 @@
 <h1>Hero Form</h1>
+<button class="rounded-circle btn btn-outline" routerLink="/heroes">
+  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-return-left"
+    viewBox="0 0 16 16">
+    <path fill-rule="evenodd"
+      d="M14.5 1.5a.5.5 0 0 1 .5.5v4.8a2.5 2.5 0 0 1-2.5 2.5H2.707l3.347 3.346a.5.5 0 0 1-.708.708l-4.2-4.2a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 8.3H12.5A1.5 1.5 0 0 0 14 6.8V2a.5.5 0 0 1 .5-.5z" />
+  </svg>
+</button>
+
 <!--
   rememer that we are using bootstrap here.
   so, all classes used are defined in Bootstrap.
@@ -63,7 +71,7 @@
       after the newHero() is called, the reset() gets executed.
       this is to maintain the pristine condition of the form.
      -->
-    <button type="button" class="btn btn-outline-secondary " (click)="newHero(); heroForm.reset()">
+    <button type="button" class="btn btn-outline-secondary " (click)="heroForm.reset()">
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-plus"
         viewBox="0 0 16 16">
         <path
