--- a/angular-projects/template-driven-form/src/app/app.component.html
+++ b/angular-projects/template-driven-form/src/app/app.component.html
@@ -1,6 +1,11 @@
 <div class="container">
   <div class="row">
     <div class="col">
+      <app-message></app-message>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
       <router-outlet>
 
       </router-outlet>
