--- a/chrischelle/style/style.css
+++ b/chrischelle/style/style.css
@@ -5,7 +5,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Alice', serif;
+    font-family: 'Source Sans Pro', sans-serif;
     color: #2A2E2F;
 }
 
@@ -22,6 +22,7 @@ h6 {
 
 h1 {
     font-size: 3em;
+    font-style: italic;
 }
 
 header {
@@ -70,14 +71,11 @@ header p {
 .overlay {
     position: absolute;
     bottom: 0;
-    background: rgb(73, 73, 73);
     background: rgba(0, 0, 0, 0.5);
-    /* Black see-through */
-    /* color: #f1f1f1; */
     width: 100%;
-    transition: .5s ease;
     opacity: 0;
     color: white;
+    transition: .5s ease;
     font-size: 1em;
     padding: 20px;
     text-align: center;
