--- a/mine/style/style.css
+++ b/mine/style/style.css
@@ -21,7 +21,7 @@ h6 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 40vh;
+    height: 90vh;
     border: 1px solid black;
     margin: 0%;
     padding: 0%;
@@ -39,8 +39,8 @@ section.main {
 }
 
 #header .headerText {
-    font-size: 2.5rem;
-    font-weight: bold;
+    font-size: 2rem;
+        font-weight: 600;
 }
 
 #header .subHeaderText {
